deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-web
  labels:
    app: pyhton-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: python-web
  template:
    metadata:
      labels:
        app: python-web
    spec:
      containers:
        - name: python-web
          image: vedaangss/python-web
          ports:
            - containerPort: 3000
