service.yml
kind: Service
apiVersion: v1
metadata:
  name: microserviceone-service
spec:
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30007
      protocol: TCP
  selector:
    app: python-web
  type: NodePort
