ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microserviceone-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: microserviceone.example.com
      http:
        paths:
          - path: /first
            pathType: Prefix
            backend:
              service:
                name: microserviceone-service
                port:
                  number: 80
          - path: /second
            pathType: Prefix
            backend:
              service:
                name: microservicetwo-service
                port:
                  number: 80
